<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <LinearLayout
        android:layout_width="323dp"
        android:layout_height="568dp"
        android:layout_marginHorizontal="100dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            android:id="@+id/liveVideoFeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live_video_feed" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:id="@+id/videoLibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_library"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/viewAlerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_alerts" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Button
            android:id="@+id/editAlertPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_alert_period" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>