<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".liveVideoFeed">

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?android:attr/buttonBarStyle"
        android:layout_width="600dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullscreen_content">

        <Button
            android:id="@+id/back"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/back" />


        <Button
            android:id="@+id/snapshot"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/snapshot" />


        <Button
            android:id="@+id/recording"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/recording" />

    </LinearLayout>

    <WebView
        android:id="@+id/fullscreen_content"
        android:layout_width="824dp"
        android:layout_height="308dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:keepScreenOn="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/fullscreen_content_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>